class ClientResource < ApplicationResource
    attribute :full_name, :string
    attribute :phone, :string
    attribute :telegram, :string
end
